installed all required packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
+certifi==2023.11.17
+charset-normalizer==3.3.2
+colorama==0.4.6
 hdlmake==3.4.dev1
+idna==3.6
+litex==2023.12
+migen==0.9.2
+packaging==23.2
+pyserial==3.5
+PyYAML==6.0.1
+requests==2.31.0
 six==1.16.0
+urllib3==2.1.0
