changed PHY to RMII version

--- a/modules/generated_liteeth/Nexys4Ethernet_UDP.yml
+++ b/modules/generated_liteeth/Nexys4Ethernet_UDP.yml
@@ -1,7 +1,7 @@
 #
 
 # PHY --------------------------------------------------------------------------
-phy: LiteEthPHYMII
+phy: LiteEthPHYRMII
 vendor: xilinx
 toolchain: vivado
 
