--- a/modules/generated_liteeth/Nexys4Ethernet_UDP.yml
+++ b/modules/generated_liteeth/Nexys4Ethernet_UDP.yml
@@ -8,8 +8,8 @@ toolchain: vivado
 # Core -------------------------------------------------------------------------
 clk_freq: 100e6
 core: udp
-mac_address: 0x10e2d5000000
-ip_address: 192.168.1.50
+#mac_address: 0x10e2d5000000  # configurable via HDL
+#ip_address: 192.168.1.50     # configurable via HDL
 data_width: 8
 
 # UDP Ports --------------------------------------------------------------------
@@ -21,6 +21,8 @@ rx_cdc_buffered: True
 # UDP Ports --------------------------------------------------------------------
 udp_ports:
   streamer1:
-    data_width: 32
-    port: 1337
     mode: streamer
+    port: 1337
+    tx_fifo_depth: 16
+    rx_fifo_depth: 16
+    data_width: 32
