added pyVHDLinstTemplate as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "modules/liteiclink"]
 	path = modules/liteiclink
 	url = https://github.com/enjoy-digital/liteiclink.git
+[submodule "utils/pyVHDLinstTemplate"]
+	path = utils/pyVHDLinstTemplate
+	url = https://github.com/JochiSt/pyVHDLinstTemplate.git
