--- a/modules/Ethernet/Nexys4Ethernet_UDP.yml
+++ b/modules/Ethernet/Nexys4Ethernet_UDP.yml
@@ -5,7 +5,7 @@ vendor: xilinx
 toolchain: vivado
 
 # Core -------------------------------------------------------------------------
-clk_freq: 125e6
+clk_freq: 100e6
 core: udp
 mac_address: 0x10e2d5000000  # configurable via HDL
 ip_address: 192.168.1.12     # configurable via HDL
@@ -18,9 +18,15 @@ data_width: 32
 #rx_cdc_buffered: True
 
 # UDP Ports --------------------------------------------------------------------
+#udp_ports:
+#  streamer1:
+#    mode: raw
+#    tx_fifo_depth: 1
+#    rx_fifo_depth: 1
+#    data_width: 16
+
 udp_ports:
-  streamer1:
+  udp:
+    data_width: 32
+    udp_port: 14000
     mode: raw
-    tx_fifo_depth: 1
-    rx_fifo_depth: 1
-    data_width: 16
