--- a/modules/Ethernet/liteeth/Nexys4Ethernet_UDP.yml
+++ b/modules/Ethernet/liteeth/Nexys4Ethernet_UDP.yml
@@ -16,7 +16,7 @@ udp_ports:   {
   "udp0": {
     "with_broadcast": False,
     "udp_port": 2000,
-    "ip_address"    : "192.168.1.20",
+    # "ip_address"    : "192.168.1.20",
     "data_width"    : 8,
     "tx_fifo_depth" : 8,
     "rx_fifo_depth" : 8,
